[frontend] fix to 60% width to prevent overflow

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -16,7 +16,7 @@ body {
   .note {
     flex: 1;
     padding: 20px;
-    width: 90%;
+    width: 60%;
     .container {
       height: 100%;
       overflow-y: auto;
